--- a/public/testimoni.html
+++ b/public/testimoni.html
@@ -54,101 +54,151 @@
       </nav>
 
 
-      <section id="testimonial">
-        <div class="container mt-10">
-          <div class="row js-slick-carousel">
 
-      <div class="col">
-        <div class="card">
-          <img class=" card-img gambar" src="https://via.placeholder.com/1000x560" alt="" />
 
-          <!-- <div class="card-body p-16to9">
+      <section id="testimonial" >
+        <div class="container mt-7">
+          <div class="row d-flex justify-content-center align-items-center">
+            <div class="col-lg-5">
+              <div class="mb-5 text-center">
+                <h1
+                  class="text-capitalize fs-xl-5"
+                  style="font-family: 'Poppins', 'Rubik', 'Open Sans', -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Helvetica Neue', Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol'"
+                >
+                  Apa kata mereka tentang webinar NIOMIC
+                </h1>
 
-            <div class="card-body-content">
-              <h5 class="card-title">Card 1</h5>
-              <p class="card-text">
-                  Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras feugiat pretium fermentum. Praesent vestibulum at tellus eget dapibus. Proin eu metus quis arcu iaculis mattis.
-              </p>
+              </div>
             </div>
+            <div class="col-lg-1"></div>
+            <div class="col-lg-12">
+              <div class="carousel-intestimoni">
+                <div>
+                  <div class="card" style="width: 18rem;">
+                    <img src="assets/img/niomic/iqbal_testimoni.png" class="card-img" alt="...">
+                    <div class="card-body">
+                      <!-- <h5 class="card-title">Card title</h5> -->
+                      <p class="card-text">“Banyak ilmu dan pengalaman baru yang diperoleh, khsususnya materi javascript dan reactjs. - Muhammad Iqbal”.</p>
+                    </div>
+                  </div>
+                </div>
+                <div>
+                  <div class="card" style="width: 18rem;">
+                    <img src="assets/img/niomic/wawan_testimoni.png" class="card-img" alt="...">
+                    <div class="card-body">
+                      <!-- <h5 class="card-title">Card title</h5> -->
+                      <p class="card-text">“Mengikuti Webinar Niomic dapat menambah pengetahuan dan skill mengenai bahasa pemograman yang saat ini banyak digunakan - WAWAN K, S.Kom., M.Kom. ”.</p>
+                    </div>
+                  </div>
+                </div>
+                <div>
+                  <div class="card" style="width: 18rem;">
+                    <img src="assets/img/niomic/torich_testimoni.png" class="card-img" alt="...">
+                    <div class="card-body">
+                      <!-- <h5 class="card-title">Card title</h5> -->
+                      <p class="card-text">“Salut tuk para Mentor sabar dalam membawakan materi hanya lewat zoom. - Torich Haerachman”.</p>
+                    </div>
+                  </div>
+                </div>
 
-          </div> -->
-
+                <div>
+                  <div class="card" style="width: 18rem;">
+                    <img src="assets/img/niomic/iqbal_testimoni.png" class="card-img" alt="...">
+                    <div class="card-body">
+                      <!-- <h5 class="card-title">Card title</h5> -->
+                      <p class="card-text">“Banyak ilmu dan pengalaman baru yang diperoleh, khsususnya materi javascript dan reactjs. - Muhammad Iqbal”.</p>
+                    </div>
+                  </div>
+                </div>
+                <div>
+                  <div class="card" style="width: 18rem;">
+                    <img src="assets/img/niomic/wawan_testimoni.png" class="card-img" alt="...">
+                    <div class="card-body">
+                      <!-- <h5 class="card-title">Card title</h5> -->
+                      <p class="card-text">“Mengikuti Webinar Niomic dapat menambah pengetahuan dan skill mengenai bahasa pemograman yang saat ini banyak digunakan - WAWAN K, S.Kom., M.Kom. ”.</p>
+                    </div>
+                  </div>
+                </div>
+                <div>
+                  <div class="card" style="width: 18rem;">
+                    <img src="assets/img/niomic/torich_testimoni.png" class="card-img" alt="...">
+                    <div class="card-body">
+                      <!-- <h5 class="card-title">Card title</h5> -->
+                      <p class="card-text">“Salut tuk para Mentor sabar dalam membawakan materi hanya lewat zoom. - Torich Haerachman”.</p>
+                    </div>
+                  </div>
+                </div>
         </div>
-      </div>
-
-      <div class="col">
-        <div class="card">
-          <img class=" card-img gambar" src="assets/img/niomic/torich_testimoni.png" alt="" />
-          <!-- <div class="card-body p-16to9">
-
-            <div class="card-body-content">
-              <h5 class="card-title">Card 5</h5>
-              <p class="card-text">
-                  Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras feugiat pretium fermentum. Praesent vestibulum at tellus eget dapibus. Proin eu metus quis arcu iaculis mattis.
-              </p>
-            </div>
-
-          </div> -->
-        </div>
-      </div>
-
-      <!-- second half cards -->
-
-      <div class="col">
-        <div class="card">
-          <img class=" card-img gambar" src="assets/img/niomic/torich_testimoni.png" alt="" />
-          <!-- <div class="card-body p-16to9">
-
-            <div class="card-body-content">
-              <h5 class="card-title">Card 5</h5>
-              <p class="card-text">
-                  Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras feugiat pretium fermentum. Praesent vestibulum at tellus eget dapibus. Proin eu metus quis arcu iaculis mattis.
-              </p>
-            </div>
-
-          </div> -->
-        </div>
-      </div>
-
-      <div class="col">
-        <div class="card">
-          <img class=" card-img gambar" src="assets/img/niomic/iqbal_testimoni.png" alt="" />
-          <!-- <div class="card-body p-16to9">
-
-            <div class="card-body-content">
-              <h5 class="card-title">Card 6</h5>
-              <p class="card-text">
-                  In dictum imperdiet sapien, eu interdum nulla posuere non.
-              </p>
-            </div>
-
-          </div> -->
-        </div>
-      </div>
-
-      <div class="col">
-        <div class="card">
-          <img class="card-img gambar" src="assets/img/niomic/wawan_testimoni.png" alt="" />
-          <!-- <div class="card-body p-16to9">
-
-            <div class="card-body-content">
-              <h5 class="card-title">Card 7</h5>
-              <p class="card-text">
-                  Vivamus pellentesque mauris placerat sem finibus dignissim. Maecenas auctor, ex sit amet porttitor vehicula, magna nisi accumsan tortor, sit amet finibus metus justo sed lorem.
-              </p>
-            </div>
-
-          </div> -->
-        </div>
-      </div>
-
-
-
-  </div>
-          <!-- </div> -->
-
         <!-- end of .container-->
       </section>
+
+      <!-- ======================================= -->
+
+      <section id="testimonial" style="background-color: #f1f1f1">
+        <div class="container mt-7">
+          <div class="position-absolute z-index-1 end-0 d-none d-lg-block"><img src="assets/img/category/shape.svg" style="max-width: 200px" alt="service" /></div>
+          <div class="row d-flex justify-content-center align-items-center">
+            <div class="col-lg-5">
+              <div class="mb-5 text-center ">
+                <h1
+                  class="text-capitalize fs-xl-6 text-center"
+                  style="font-family: 'Poppins', 'Rubik', 'Open Sans', -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Helvetica Neue', Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol'"
+                >
+                  Kegiatan Peserta Belajar NIOMIC dan Testimoni
+                </h1>
+                  <p class="card-text fs--3 text-center">Pengalaman selama belajar bersama NIOMIC.</p>
+
+              </div>
+            </div>
+            <div class="col-lg-1 text-center">
+              <
+            </div>
+            <div class="col-lg-12 mt-7 fluid">
+              <div class="carousel-testimoni-f">
+                <div>
+                  <div class="card" >
+                    <img src="https://cdn.discordapp.com/attachments/935137783431983164/952041228164276274/c-kegiatan-webinar-bkpsdm-karawang.png" class="card-img" alt="...">
+                    <!-- <div class="card-body"> -->
+                      <!-- <h5 class="card-title">Card title</h5> -->
+                    <!-- </div> -->
+                  </div>
+                </div>
+                <div>
+                  <div class="card">
+                    <img src="https://cdn.discordapp.com/attachments/935137783431983164/952041228394975312/c-kegiatan-webinar-bkpsdm-karawang-1.png" class="card-img" alt="...">
+
+                  </div>
+                </div>
+                <div>
+                  <div class="card" >
+                    <img src="https://cdn.discordapp.com/attachments/935137783431983164/952041228579536916/c-kegiatan-webinar-bkpsdm-karawang-2.png" class="card-img" alt="...">
+
+                  </div>
+                </div>
+
+                <div>
+                  <div class="card" >
+                    <img src="https://cdn.discordapp.com/attachments/935137783431983164/952041228826968104/c-testi-instagram-1.png" class="card-img" alt="...">
+
+                  </div>
+                </div>
+                <div>
+                  <div class="card" >
+                    <img src="https://cdn.discordapp.com/attachments/935137783431983164/952041229040889856/c-testimoni-afif-2.png" class="card-img" alt="...">
+
+                  </div>
+                </div>
+                <div>
+                  <div class="card" >
+                    <img src="https://cdn.discordapp.com/attachments/935137783431983164/952041229284151377/c-testimoni-wa-farhan.png" class="card-img" alt="...">
+
+                  </div>
+                </div>
+        </div>
+        <!-- end of .container-->
+      </section>
+
+      <!-- ======================================= -->
 
       <!-- ============================================-->
       <!-- <section> begin ============================-->
